cabal-version:      2.4
name:               polysemy-utils
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Felix Leitz
maintainer:         felix.leitz92@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Effects.Cache
                    , Effects.Delay
                    , Effects.Logging
                    , Effects.PostgreSQL
                    , Effects.Request
                    , Effects.Time
                    , Effects.UUID
    other-modules:
    ghc-options:      -Wall
                      -O2
                      -haddock
                      -flate-specialise
                      -fspecialise-aggressively
                      -fplugin=Polysemy.Plugin
    build-depends:    base
                    , containers
                    , co-log-polysemy
                    , polysemy
                    , polysemy-plugin
                    , postgresql-simple
                    , time
                    , uuid
    hs-source-dirs:   src
    default-language: GHC2021
    
test-suite polysemy-utils-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:    TimeSpec
                  , CacheSpec
                  , Utils
  hs-source-dirs:   test
  ghc-options:      -Wall
  build-depends:    base
                  , containers
                  , hspec
                  , polysemy
                  , polysemy-utils
                  , time
                  , quickcheck-instances
                  , QuickCheck
  default-language: GHC2021